# llmcommit

./: .gitignore  .llmcommit.json  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_ja.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: hero-image.md
src/llmcommit/: __init__.py  cache_cli.py  config.py  fast_loader.py  git_handler.py  llm_client.py  main.py  model_cache.py  model_server.py  onnx_client.py  profiler.py  simple_client.py
tests/: test_config.py  test_git_handler.py
